apps/email/style/message_cards.css
.card-message-list {
}

.msg-listedit-header {
}
.msg-list-scrollouter {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}
.msg-list-scrollinner {
  /* force the card to be tall enough so we can scroll the search bit out of the
     way by default*/
  min-height: calc(100% + 4.8rem); /* 2.4rem is the search bar */
  /* Give it a z-index of 0 so that all its contents are forced into a single stacking
     context. This simplifies display list construction because our many positioned
     descendants can be clipped as a single group instead of independently.
     XXX we can take this out when Gecko bug 841192 is fixed. */
  position: relative;
  z-index: 0;
}

/* Have enough scroll space to have the search bit pull out. */
.msg-list-scroll-padding-top {
  height: 5.6rem;
}
/* Have enough space at the bottom for the last message to not be under the
   action bar. */
.msg-list-scroll-padding-bottom {
  height: 4rem;
}

.msg-search-tease-bar {
  background-color: #eee;
  text-align: center;
  border-bottom: 0.1rem solid #bdbdbd;
}

/* When card is slightly shown when folder card is center,
   be sure any inputs do not accept clicks/taps that would
   mess up the transition back to the message list. Also
   disable scrolling of the list */
.card-message-list.after input,
.card-message-list.after .msg-list-scrollouter {
  pointer-events: none;
}

input.msg-search-text-tease {
  display: inline-block;
  width: calc(100% - 3rem);
  height: 3rem;
  margin: 0.1rem 0 0.4rem;
  font-size: 1.7rem;
  border: 0.1rem solid #c2c2c2;
  border-radius: 0.3rem;
}

.msg-search-text {
  font-size: 1.7rem !important;
}

.msg-no-subject {
  font-style: italic;
}

/* Sections horizontally chop up the item: unread, details, icons, avatar.
 * We have 320 horizontal pixels to play with.
 */
.msg-header-item {
  display: block;
  position: relative;
  height: 8rem;
  overflow: hidden;
}
.msg-header-item:active {
  background-color: #b1f1ff;
}
.msg-header-unread-section {
  position: absolute;
  top: 50%;
  left: 1rem;
  display: inline-block;
  height: .9rem;
  width: .9rem;
  margin-top: -.45rem;
  border-radius: 50%;
}
.msg-header-unread-section-unread {
  background-color: #53b8cc;
}
.msg-header-details-section {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 1.5rem;
  width: calc(100% - 3rem);
  height: 100%;
  font-size: 1.6rem;
  line-height: 2rem;
  padding: 1rem 1.5rem 0;
  border-bottom: 0.1rem solid #bdbdbb;
}
.msg-header-icons-section {
  display: block;
  position: absolute;
  top: 0;
  right: 2.8rem; /* The width of the avatar-section. */
  width: 2rem;
  height: 100%;
  padding-top: 2.5rem;
}
.msg-header-avatar-section {
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  width: 2.8rem;
  height: 100%;
}

.msg-header-author-and-date {
  display: table;
  table-layout: fixed;
  width: -moz-available;
}
.msg-header-author {
  font-size: 1.9rem;
  font-weight: 500;
  color: #000;
  display: table-cell;
  width: -moz-available;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.msg-header-date {
  color: #808080;
  font-size: 1.5rem;
  font-weight: 400;
  display: table-cell;
  width: -moz-min-content;
  white-space: nowrap;
  margin-left: 1ch;
}
.msg-header-date-unread {
  color: #1D8399;
}
.msg-header-subject {
  display: block;
  color: #000;
  font-size: 1.5rem;
  font-weight: 500;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.msg-header-snippet {
  display: block;
  color: #808080;
  font-size: 1.5rem;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.msg-header-star {
  display: block;
  color: #888844;
  font-size: 150%;
}
.msg-header-star-starred {
  background: url("images/icons/message-list-star.png") no-repeat center / 2rem;
  position: absolute;
  right: -2rem;
  width: 2rem;
  height: 2rem;
  top: 3rem;
}
.msg-header-attachments {
  display: block;
}
.msg-header-attachments-yes {
  background: url("images/icons/message-list-attachment.png") no-repeat center / 2rem;
  position: absolute;
  right: -2rem;
  width: 2rem;
  height: 2rem;
  top: 5rem;
}


.msg-envelope-bar {
  padding-top: 0.7rem;
  width: 100%;
  font-size: 1.4rem;
  color: #848484;
}

.msg-envelope-date {
  font-size: 1.3rem;
  color: #8f8f8f;
}

.msg-envelope-from-line,
.msg-envelope-details {
  padding: 0 1.5rem 0.8rem;
}

.msg-envelope-key::after {
  content: ":";
}


.msg-envelope-subject-container {
  padding: 0.5rem 1.3rem;
  border-top: 0.1rem solid #bdbdbb;
  border-bottom: 0.1rem solid #bdbdbb;
}

.msg-envelope-subject {
  color: #000;
  margin: 0;
  font-size: 1.8rem;
  font-weight: bold;
}

.msg-body-container {
  font-family: monospace;
  white-space: pre-wrap;
  font-size: 1.9rem;
  line-height: 2.6rem;
  margin: 1rem 1.5rem;
}

.card-message-reader .msg-body-container > progress {
  display: block;
  margin: 0 auto;
}

.msg-attachments-container {
  padding: 0 1.5rem;
  font-size: 1.2rem;
  line-height: 4rem;
}

.msg-peep-bubble {
  color: #2c2c2c;
  display: inline-block;
  background: #f2f2f2;
  border: 0.1rem solid #ddd;
  border-radius: 1rem;
  margin: 0.3rem 0 0;
  padding: 0.2rem 0.8rem;
  font-weight: 500;
  font-size: 1.3rem;
  box-shadow: 0 0.1rem 0.1rem #fff inset;
}
.msg-peep-bubble * {
  pointer-events: none;
}
.msg-peep-content {
}
.msg-peep-address {
}

.msg-attachment-item {
  list-style-type: none;
  height: 4rem;
}
.msg-attachment-item[state="downloadable"]  > .msg-attachment-download {
  display: inline-block;
}
.msg-attachment-item[state="downloading"]  > .msg-attachment-downloading {
  display: inline-block;
}
.msg-attachment-item[state="downloaded"]  > .msg-attachment-view {
  display: inline-block;
}
.msg-attachment-icon {
  background: url("images/icons/message-list-attachment.png") no-repeat center / 2rem;
  display: inline-block;
  width: 2rem;
  height: 2rem;
  margin-top: -3.5rem;
  vertical-align: middle;
}
.msg-attachment-filename {
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: calc(100% - 12.5rem);
  white-space: nowrap;
}
.msg-attachment-filesize {
  color: gray;
  display: inline-block;
  margin-top: -3.5rem;
  max-width: 4.5rem;
  vertical-align: middle;
}
.msg-attachment-download {
  display: none;
  width: 3.5rem;
  margin-bottom: 0;
  position: absolute;
  right: 1rem;
}
.msg-attachment-downloading {
  display: none;
  margin-bottom: 0;
  position: absolute;
  right: 1rem;
}
.msg-attachment-view {
  display: none;
  width: 4.5rem;
  margin-bottom: 0;
  position: absolute;
  right: 0;
}

.moz-external-link {
  color: blue;
  cursor: pointer;
}

.msg-body-content {
  color: black;
  margin: 0.4rem 0;
  word-wrap: break-word;
}
.msg-body-signature {
  color: blue;
  margin: 0.4rem 0;
}
.msg-body-leadin {
  color: gray;
  margin: 0.4rem 0;
}
.msg-body-q1, .msg-body-q2, .msg-body-q3, .msg-body-q4,
.msg-body-q5, .msg-body-q6, .msg-body-q7, .msg-body-q8, .msg-body-q9 {
  padding: 0.2rem;
  margin: 0.4rem 0;
}
.msg-body-q1 {
  border-left: 0.1rem solid gray;
}
.msg-body-q2 {
  border-left: 0.2rem solid gray;
}
.msg-body-q3 {
  border-left: 0.3rem solid gray;
}
.msg-body-q4 {
  border-left: 0.4rem solid gray;
}
.msg-body-q5 {
  border-left: 0.5rem solid gray;
}
.msg-body-q6 {
  border-left: 0.6rem solid gray;
}
.msg-body-q7 {
  border-left: 0.7rem solid gray;
}
.msg-body-q8 {
  border-left: 0.8rem solid gray;
}
.msg-body-q9 {
  border-left: 0.9rem solid gray;
}
.msg-body-disclaimer, .msg-body-list, .msg-body-product, .msg-body-ads {
  color: gray;
  margin: 0.4rem 0;
}

.msg-reader-load-infobar {
  position: absolute;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: white;
  font-size: 1.2rem;
  left: 0;
  bottom: 4.8rem;
  width: 100%;
  /* we do not specify a height because text may be more than 1 line high */
  line-height: 2.2rem;
  padding: 0.8rem 1.6rem;
  background-color: #424242;;
}

.msg-reader-action-toolbar {
  text-align: center;
}

.msg-reader-action-toolbar .msg-delete-btn {
  position: absolute;
  left: 0;
}

.msg-reader-action-toolbar .msg-move-btn {
  position: absolute;
  right: 0;
}

/* We need to use !important on the buttons because shared/style/buttons.css definesa more specific
   selector than ours for :active, so we can't just reorder the files to fix the problem. */
.msg-refresh-btn {
  background-image: url("images/icons/refresh.png") !important;
  background-size: 3.2rem !important;
}
.msg-refresh-btn[data-state="synchronizing"] {
  animation: 0.9s msg-refresh-rotate infinite steps(30);
}

@keyframes msg-refresh-rotate {
  from { transform: rotate(1deg); }
  to   { transform: rotate(360deg); }
}



.msg-search-btn {
  background-image: url("images/icons/search.png") !important;
  position: absolute;
  right: 0;
}

.msg-edit-btn {
  background-image: url("images/icons/edit-mode.png") !important;
  position: absolute;
  left: calc((100% - 6rem)/2);
}

.bottom-toolbar .msg-btn-active {
  background-color: rgb(0, 138, 170) !important;
}

.msg-star-btn {
  background-image: url("images/icons/star.png") !important;
}

.msg-mark-read-btn {
  background-image: url("images/icons/mark.png") !important;
}

.msg-delete-btn {
  background-image: url("images/icons/delete.png") !important;
}

.msg-move-btn {
  background-image: url("images/icons/move.png") !important;
}

.msg-forward-btn {
  background-image: url("images/icons/forward.png") !important;
}

/* Message list edit mode layout control */
.msg-messages-container label.negative {
  height: 8rem;
  width: 4rem;
  display: none;
  pointer-events: none;
}
.msg-messages-container.show-edit label.negative {
  display: inline-block;
}

.msg-messages-container.show-edit .msg-header-unread-section {
  left: 3.9rem;
}
.msg-messages-container.show-edit .msg-header-details-section {
  padding-left: 4.5rem;
}

/*
  Empty message-list container
*/
.msg-list-empty-container {
  position: absolute;
  top: 9rem;
  left: 1.5rem;
  right: 1.5rem;
  width: calc(100% - 3rem);
  height: 20rem;
}

.msg-list-empty-message-text {
  position: relative;
  top: 2.8rem;
  margin: 0 auto;
  padding: 1rem 1.5rem;
  color: #010101;
  font-weight: lighter;
  font-size: 2.4rem;
  border-top: 0.1rem solid #bebebe;
}

/* PROGRESS LABEL BUILDING BLOCKS EXTENSION */
.msg-messages-sync-container {
  margin-bottom: 1.2rem;
}


.msg-messages-sync-container > p,
.msg-list-empty {
  height: 8rem;
  padding: 0;
  margin: 0;
  font-weight: 500;
  font-size: 1.5rem;
  line-height: 8rem;
}
.msg-list-empty {
  position: absolute;
  top: 40%;
}

.msg-messages-sync-container > .msg-messages-syncing,
.msg-messages-sync-container > .msg-messages-sync-more {
  border-bottom: 0.1rem solid #bebebe;
  width: calc(100% - 3rem);
  margin: 0 auto;
  text-align: center;
}

.msg-messages-sync-more {
  height: 8rem;
  padding: 0;
  margin: 0;
  font-weight: 500;
  font-size: 1.5rem;
  line-height: 8rem;
}
.msg-messages-sync-more > span {
  margin: 0 3rem;
}

.msg-list-topbar {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  position: absolute;
  top: 5rem;
  left: 0;
  width: 100%;
  padding: 0.6rem 3rem;
  color: #fff;
  font-size: 1.4rem;
  font-weight: 500;
  line-height: 2.4rem;
  background-color: #00aacc;
  z-index: 10;
}

.msg-reply-menu button:before {
  content: "";
  display: block;
  float: left;
  width: 3rem;
  height: 3rem;
  margin: 0.5rem 1rem 0 0;
  background: transparent no-repeat top left 100% 100%;
}

.msg-reply-menu-reply:before {
  background-image: url("../shared/style/headers/images/icons/reply.png");
}

.msg-reply-menu-reply-all:before {
  background-image: url("../shared/style/headers/images/icons/reply-all.png");
}

.msg-reply-menu-forward:before {
  background-image: url("images/icons/forward.png");
}

